--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "area": "editor-editor",
   "version": "0.1.0",
   "description": "A custom theme",
-  "url": "https://share.gls.cm/wbu57x1z/download/gls-theme-1.css",
+  "url": "https://github.com/racha13/GLS-Theme-1/blob/fb1b73fa4fd73844825ea7b2e16c31a623bec379/gls-light-1.css",
   "download_url": "https://github.com/racha13/GLS-Theme-1/archive/refs/tags/theme.zip",
   "latest_url": "https://github.com/racha13/GLS-Theme-1/blob/87ceeb210ce6ad8df2bea574645558f1871cdb23/package.json"
 }
